--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -86,6 +86,9 @@ user:
     mode_OFF: "Loot protect has been turned off globally"
     mode_MAX_DAMAGE: "Item will be given to the player who made most damages"
     mode_FINAL_DAMAGE: "Item will be given to the player who made the last damage."
+    ignore_vanilla: "You won't auto pickup vanilla loot items."
+    reject_vanilla: "You won't pickup vanilla items unless sneaking."
+    include_vanilla: "You will auto pickup vanilla loot items."
   exhibition:
     no_item_frame: "No ItemFrame found"
     already_set: "Already set."
