--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -231,7 +231,7 @@ user:
     error: That home seems to be broken, seek pm for help
     invalid_home: That home is in a removed world
     bed_not_set_yet: You has not set a bed or home
-    unsafe: The teleportCmdWarpper destination is unsafe
+    unsafe: The teleport destination is unsafe
     invalid_name: Invalid home name
     home_limit: You cannot set more than %d homes
     home_limit_one: You can set only one home. Renaming to home
