--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -347,6 +347,15 @@ user:
   tpall:
     error: "not enough space"
     success: "teleported %d players to you"
+  backpack:
+    already_opened: This bacpack is already opened
+    force_opened: Your backpack is being opened by admin
+    invalid_page: 'Invalid page %d. Expected: [0, %d)'
+    title: 'Backpack of %s. Page %d/%d'
+    next: Next
+    back: Back
+    error_saving: Error saving backpack. Please concat operators for help.
+    error_state: 'Backpack of %s line %d failed to save when opened by %s'
 manual:
   help:
     description: Show help message
