--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -383,10 +383,9 @@ user:
     force_opened: 您的背包被管理员打开了
     invalid_page: '无效的页码 %d。有效页码：[0, %d)'
     title: '%s 的背包 第 %d/%d 页'
-    next: 下一页
-    back: 上一页
     error_saving: 背包保存失败。请联系管理员获取帮助。
     error_state: '%s 的背包第 %d 行保存失败（由 %s 打开）。'
+    disabled: 当前背包已被禁用
 manual:
   help:
     description: 显示帮助信息
