--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -355,6 +355,8 @@ user:
     error_saving: Error saving backpack. Please concat operators for help.
     error_state: 'Backpack of %s line %d failed to save when opened by %s'
     disabled: Current backpack is disabled
+    n_lines: 'Backpack of %s set to %d lines'
+    no_required_blocks: 'There are no {block} in %d blocks'
 manual:
   help:
     description: Show help message
