--- a/src/main/resources/lang/zh_TW.yml
+++ b/src/main/resources/lang/zh_TW.yml
@@ -6,6 +6,9 @@ user:
     no_item_offhand: 副手中沒有物品
     enabled: ''
     disabled: ''
+    upgrade_complete: 升级成功！
+    upgrade_failed: 升级失败，请联系管理员
+    upgrade_invalid_item: 物品无效
   error:
     bad_command: '無效的指令: %s'
     not_int: ''
