add upgrade test

--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -9,6 +9,8 @@ user:
     upgrade_complete: 升级成功！
     upgrade_failed: 升级失败，请联系管理员
     upgrade_invalid_item: 物品无效
+    valid: 该物品已成功升级
+    invalid: 该物品没有成功升级
   error:
     bad_command: 'Wrong command: %s'
     not_int: Not a valid integer
